// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/LicenceLevel renders effective licence 1`] = `
<div>
  <div
    class="licenceLevelComponent licenceC"
  >
    <span
      class="licenceLetter"
    >
      C
    </span>
    <span
      class="licenceText"
    />
  </div>
</div>
`;

exports[`components/LicenceLevel renders for Pro 1`] = `
<div>
  <div
    class="licenceLevelComponent licenceP"
  >
    <span
      class="licenceLetter"
    >
      P
    </span>
    <span
      class="licenceText"
    >
      1.00
    </span>
  </div>
</div>
`;

exports[`components/LicenceLevel renders for float levels 1`] = `
<div>
  <div
    class="licenceLevelComponent licenceD"
  >
    <span
      class="licenceLetter"
    >
      D
    </span>
    <span
      class="licenceText"
    >
      3.50
    </span>
  </div>
</div>
`;

exports[`components/LicenceLevel renders for high D Class 1`] = `
<div>
  <div
    class="licenceLevelComponent licenceD"
  >
    <span
      class="licenceLetter"
    >
      D
    </span>
    <span
      class="licenceText"
    >
      4.00
    </span>
  </div>
</div>
`;

exports[`components/LicenceLevel renders for other float levels 1`] = `
<div>
  <div
    class="licenceLevelComponent licenceD"
  >
    <span
      class="licenceLetter"
    >
      D
    </span>
    <span
      class="licenceText"
    >
      4.50
    </span>
  </div>
</div>
`;
